tests/baselines/reference/restParameterWithBindingPattern6.errors.txt
tests/cases/compiler/restParameterWithBindingPattern6.ts(1,23): error TS2493: Tuple type '[boolean, string, number]' with length '3' cannot be assigned to tuple with length '4'.


==== tests/cases/compiler/restParameterWithBindingPattern6.ts (1 errors) ====
    function a(...[a, , , d]: [boolean, string, number]) { }
                          ~
!!! error TS2493: Tuple type '[boolean, string, number]' with length '3' cannot be assigned to tuple with length '4'.